// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/presenters/EmptyStatePresenter renders with all props 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin-top: 20px;
}

.emotion-1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

<div
  className="emotion-2"
>
  <test-file-stub
    className="emotion-0"
    role="presentation"
  />
  <p
    className="emotion-1"
    style={
      Object {
        "margin": "20px 0 37px",
      }
    }
  >
    hello world
  </p>
</div>
`;

exports[`notifications-flyout/presenters/EmptyStatePresenter renders without props 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  margin-top: 20px;
}

.emotion-1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

<div
  className="emotion-2"
>
  <test-file-stub
    className="emotion-0"
    role="presentation"
  />
  <p
    className="emotion-1"
    style={
      Object {
        "margin": "20px 0 37px",
      }
    }
  >
    You currently have no notifications
  </p>
</div>
`;
